--- a/08-ansible-03-yandex/playbook/vector_config.j2
+++ b/08-ansible-03-yandex/playbook/vector_config.j2
@@ -1,1 +1,10 @@
+[data]
+  type = "file"
+  inputs = {"/var/log/syslog"}
 
+[transforms.json]
+  type = "json_encode"
+
+[sinks.console]
+  type = "console"
+  inputs = ["json"]
