--- a/08-ansible-03-yandex/playbook/nginx_lighthouse.conf.j2
+++ b/08-ansible-03-yandex/playbook/nginx_lighthouse.conf.j2
@@ -3,8 +3,10 @@ server {
     server_name localhost;
 
     location / {
-        root /var/www/lighthouse;
+        root /var/www/lighthouse/lighthouse-main;
         index index.html;
-        try_files $uri $uri/ =404;
+        try_files $uri $uri/ /index.html;
     }
+
+    error_page 404 /404.html;
 }
